<resources>
    <string name="app_name">Homes R Us</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Dont_have_account">Don`t have an account? Sign up here</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Phone">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_format">(ex. 8889990000)</string>
    <string name="Homes_For_You">Homes For You!</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="Bedrooms">Bedrooms:</string>
    <string name="Bathrooms">Bathrooms:</string>
    <string name="Profile">Profile</string>
    <string name="Notifications">Notifications</string>
    <string name="add_home">Add House</string>
    <string name="Filter">Filter</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filter">Filter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="minimum_bedrooms">Minimum bedrooms:</string>
    <string name="minimum_bathrooms">Minimum bathrooms:</string>
    <string name="max_price">Max Price:</string>
    <string name="minimum_bedrooms_description">Enter here the minimum number of bedrooms(ex. 3)</string>
    <string name="minimum_bathrooms_description">Enter here the minimum number of bathrooms(ex. 2)</string>
    <string name="maximum_price">Enter the max price (ex. 750000)</string>
    <string name="Map_zoom">Map Zoom</string>
    <string name="Map_zoom_description">Enter the map zoom (ex. 15)</string>
    <string name="Enter_Whole_Number">Enter Whole Number (ex.5)</string>
    <string name="Set_Filter">Set Filter</string>
    <string name="Clear_Filter">Clear Filter</string>
    <string name="Add_House">Add House</string>
    <string name="List_a_house">List a home for sale on our platform!</string>
    <string name="Address">Address</string>
    <string name="Price">Price</string>
    <string name="Geo_lookup">Geo Lookup</string>
    <string name="Geo_lookup_description">Enter longitude and Latitude to see map view</string>
    <string name="Search">Search</string>
    <string name="Go">Go!</string>
    <string name="Back">Back</string>
    <string name="settings">Settings</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Number_Of_Listed_Houses">Number of Listed Homes: </string>
    <string name="Contact">Contact</string>
    <string name="Contact_Info">Contact Info: </string>
    <string name="enter_address_for_contact">Enter address to get homeowner contact info</string>


</resources>